--- a/applyingForGraduateSchool.bib
+++ b/applyingForGraduateSchool.bib
@@ -57,8 +57,7 @@
   author  = {Hamaguchi, Hiroki},
   year    = {2023},
   month   = jun,
-  urldate = {2023-06-02},
-  note    = {\url{https://github.com/hari64boli64/applyingForGraduateSchool}}
+  urldate = {2023-06-02}
 }
 
 @misc{hidoJinNiannoSIGKDDbesutopepawoShiZhuangGongKaisitemimasita2013,
@@ -178,7 +177,7 @@
   volume   = {58},
   number   = {8},
   pages    = {315--320},
-  doi      = {10.11509/isciesci.58.8_315},
+  doi      = {10.11509/isciesci.58.8\_315},
   keywords = {high performance computng,singular value decomposition},
   file     = {C\:\\Users\\hirok\\Zotero\\storage\\9IVSKGMV\\有作 - 2014 - 特異値分解アルゴリズムの最近の発展.pdf;C\:\\Users\\hirok\\Zotero\\storage\\29INN785\\ja.html}
 }
